Criado a pagina Contato

--- a/projeto-interdiciplinar/src/app/shared/pages/contato/contato.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/contato/contato.component.html
@@ -1,1 +1,38 @@
-<p>contato works!</p>
+<div class="container" style="max-width: 60vw;">
+
+    <div class="row mb-3">
+        <div align="center" class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 mt-5">
+            <h1>Contato</h1>
+            <hr style="margin-top: 5px; color: black;" width="80">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <form>
+                <div class="row">
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <label>Nome *</label>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <label>E-mail *</label>
+                        <input type="email" class="form-control">
+                    </div>
+                </div>
+                <div class="form-group bmd-form-group">
+                    <label>Assunto</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group mb-3">
+                    <label>Mensagem</label>
+                    <textarea class="form-control" rows="3"></textarea>
+                </div>
+                <div align="center">
+                    <button class="btn">Enviar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+</div>
