--- a/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/postagem/postagem.component.html
@@ -12,7 +12,7 @@
   
     <!-- Button -->
     <div class="col text-center mb-5">
-      <button [routerLink]="['/cadastro/usuario']" class="btn btn-primary">
+      <button [routerLink]="['/cadastro/usuario']" class="btn">
         CADASTRE-SE
       </button>
     </div>
