Adicionado select de estado e cidade no cadastro de Usuario

--- a/projeto-interdiciplinar/src/app/shared/pages/cadastro-usuario/cadastro-usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/cadastro-usuario/cadastro-usuario.component.html
@@ -87,9 +87,9 @@
         <div class="form-group col-md-4">
             <div class="form-group" [ngClass]="aplicaCssErro('estado')">
                 <label for="inputState">Estado</label>
-                <select id="inputState" class="form-control" formControlName="estado">
-                    <option selected>Choose...</option>
-                    <option>...</option>
+                <select (change)="hasEstado()" id="inputState" class="form-control" formControlName="estado">
+                    <option></option>
+                    <option *ngFor="let estado of estados" [value]="estado.ID">{{ estado.Nome }}</option>
                 </select>
 
                 <app-campo-control-erro 
@@ -103,8 +103,7 @@
             <div class="form-group" [ngClass]="aplicaCssErro('cidade')">
                 <label for="inputState">Cidade</label>
                 <select id="inputState" class="form-control" formControlName="cidade">
-                    <option selected>Choose...</option>
-                    <option>...</option>
+                    <option *ngFor="let cidade of cidades" [value]="cidade.Nome" selected>{{ cidade.Nome }}</option>
                 </select>
 
                 <app-campo-control-erro 
