--- a/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/usuario/usuario.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div style="width: 100%; word-wrap: break-word;" class="col-md-12">
             {{ usuario?.sobreMim }}
         </div>
     </div>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div style="width: 100%; word-wrap: break-word;" class="col-md-12">
             {{ usuario?.relato }}
         </div>
     </div>
