--- a/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
+++ b/projeto-interdiciplinar/src/app/shared/pages/psicologo/psicologo.component.html
@@ -3,11 +3,11 @@
     <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 mt-3">
         <div class="row">
 
-            <div class="col-xs-8 col-sm-6 col-md-5 col-lg-3 circle">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 circle">
                 <img src="{{ psicologo?.imagem }}">
             </div>
 
-            <div class="col-xs-4 col-sm-6 col-md-7 col-lg-6">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-9">
                 <h3>{{ psicologo?.nome }}</h3>
                 <h5>Psicologia Clínica</h5>
                 <h5>{{ psicologo?.cidade }}, {{ psicologo?.estado }} - Brasil</h5>
@@ -27,7 +27,7 @@
                 </div>
             </div>
 
-            <div class="col-xs-4 col-sm-6 col-md-7 col-lg-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 
             </div>
         </div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div style="width: 100%; word-wrap: break-word;" class="col-md-12">
             {{ psicologo?.sobreMim }}
         </div>
     </div>
